--- a/index.html
+++ b/index.html
@@ -4,67 +4,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enrique Grid</title>
+    <title>Enrique Felez</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <h1>Enrique Sistema do Grid</h1>
+    <h1>Enrique</h1>
     <div class="container grid">
-        <div class="col-1">1</div>
-        <div class="col-1">2</div>
-        <div class="col-1">3</div>
-        <div class="col-1">4</div>
-        <div class="col-1">5</div>
-        <div class="col-1">6</div>
-        <div class="col-1">7</div>
-        <div class="col-1">8</div>
-        <div class="col-1">9</div>
-        <div class="col-1">10</div>
-        <div class="col-1">11</div>
-        <div class="col-1">12</div>
+        <div class="col-1">B</div>
+        <div class="col-1">o</div>
+        <div class="col-1">o</div>
+        <div class="col-1">t</div>
+        <div class="col-1">S</div>
+        <div class="col-1">t</div>
+        <div class="col-1">a</div>
+        <div class="col-1">p</div>
+        <div class="col-1">F</div>
+        <div class="col-1">o</div>
+        <div class="col-1">f</div>
+        <div class="col-1">o</div>
     </div>
     <div class="container grid">
-        <div class="col-2">1</div>
-        <div class="col-2">2</div>
-        <div class="col-2">3</div>
-        <div class="col-2">4</div>
-        <div class="col-2">5</div>
-        <div class="col-2">6</div>
+        <div class="col-2">B</div>
+        <div class="col-2">o</div>
+        <div class="col-2">o</div>
+        <div class="col-2">t</div>
+        <div class="col-2">S</div>
+        <div class="col-2">t</div>
     </div>
     <div class="container grid">
-        <div class="col-3">1</div>
-        <div class="col-3">2</div>
-        <div class="col-3">3</div>
-        <div class="col-3">4</div>
+        <div class="col-3">B</div>
+        <div class="col-3">o</div>
+        <div class="col-3">o</div>
+        <div class="col-3">t</div>
     </div>
     <div class="container grid">
-        <div class="col-4">1</div>
-        <div class="col-4">2</div>
-        <div class="col-4">3</div>
+        <div class="col-4">B</div>
+        <div class="col-4">o</div>
+        <div class="col-4">o</div>
     </div>
     <div class="container grid">
-        <div class="col-5">1</div>
-        <div class="col-5">2</div>
-        <div class="col-2">3 pra fechar a conta</div>
+        <div class="col-5">B</div>
+        <div class="col-5">o</div>
+        <div class="col-2">o</div>
     </div>
     <div class="container grid">
-        <div class="col-6">1</div>
-        <div class="col-6">2</div>
+        <div class="col-6">B</div>
+        <div class="col-6">o</div>
     </div>
     <div class="container grid">
-        <div class="col-7">1</div>
-        <div class="col-5">Pra fechar a conta</div>
+        <div class="col-7">B</div>
+        <div class="col-5">o</div>
     </div>
     <div class="container grid">
-        <div class="col-8">1</div>
-        <div class="col-4">Pra fechar a conta</div>
+        <div class="col-8">B</div>
+        <div class="col-4">o</div>
 
     </div>
+    <div class="container grid">
+        <div class="col-9">B</div>
+        <div class="col-3">o</div>
 
+    </div>
+    <div class="container grid">
+        <div class="col-10">B</div>
+        <div class="col-2">o</div>
 
+    </div>
+    <div class="container grid">
+        <div class="col-1">classes:</div>
+        <div class="col-11">As classes servem para falar do tamanho das telas como "sm"= small/pequeno, "md'=
+            medium/médio, "lg" = large/grande, "xxs" = extra small/muito pequeno</div>
 
+    </div>
+    <div class="container grid">
+        <div class="col-12">O bootstrap é fácil de usar quando comparado com o grid normal, mas ele também apresenta
+            mais lmitações no quesito personalização, por mais que o grid seja mais difícil, depois de terminar o código
+            corretamente, ele nao é tão dificil como o bootstrap. Já sobre flexibilidade, o grid mostra um nível mais
+            alto que o bootstrap também. Vantagens: O bootstrap é mais fácil e rápido, já o grid te oferece maior nível
+            de personalização, porém requer mais conhecimento técnico.
+        </div>
 
+    </div>
 </body>
 
 </html>
