--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Enrique Felez</title>
+    <title>Enrique Grid</title>
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <h1>Enrique</h1>
+    <h1>Enrique Sistema do Grid</h1>
     <div class="container grid">
         <div class="col-1">B</div>
         <div class="col-1">o</div>
@@ -59,33 +59,28 @@
     <div class="container grid">
         <div class="col-8">B</div>
         <div class="col-4">o</div>
-
+ 
     </div>
     <div class="container grid">
         <div class="col-9">B</div>
         <div class="col-3">o</div>
-
+ 
     </div>
     <div class="container grid">
         <div class="col-10">B</div>
         <div class="col-2">o</div>
-
+ 
     </div>
     <div class="container grid">
         <div class="col-1">classes:</div>
-        <div class="col-11">As classes servem para falar do tamanho das telas como "sm"= small/pequeno, "md'=
-            medium/médio, "lg" = large/grande, "xxs" = extra small/muito pequeno</div>
-
+        <div class="col-11">Essas classes servem para se referir ao tamanho das telas como "sm"= small/pequeno, "md'= medium/médio, "lg" = large/grande, "xxs" = extra small/muito pequeno</div>
+ 
     </div>
     <div class="container grid">
-        <div class="col-12">O bootstrap é fácil de usar quando comparado com o grid normal, mas ele também apresenta
-            mais lmitações no quesito personalização, por mais que o grid seja mais difícil, depois de terminar o código
-            corretamente, ele nao é tão dificil como o bootstrap. Já sobre flexibilidade, o grid mostra um nível mais
-            alto que o bootstrap também. Vantagens: O bootstrap é mais fácil e rápido, já o grid te oferece maior nível
-            de personalização, porém requer mais conhecimento técnico.
+        <div class="col-12">O bootstrap é mais fácil de se utilizar quando comparado com o grid normal, porém ele também apresenta mais lmitações no quesito personalização, por mais que o grid seja mais difícil, após terminar o código corretamente, ele fica tão fácil como o bootstrap. No que se diz sobre flexibilidade, o grid apresenta um nível mais alto que o bootstrap também. Vantagens: O bootstrap é mais fácil e rápido, já o grid te oferece maior nível de personalização, porém requer mais conhecimento técnico.
         </div>
-
+ 
     </div>
+   
 </body>
-
 </html>
